# naive-rag

naive-rag-system/: .env.example  main.py  pyproject.toml
naive-rag-system/src/api/v1/routes/: query.py
naive-rag-system/src/api/v1/schemas/: query_schema.py
naive-rag-system/src/api/v1/services/: query_service.py
naive-rag-system/src/core/: db.py
naive-rag-system/src/ingestion/: ingestion.py
